--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".FileExActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".FileExActivity"></activity>
+        <activity android:name=".PrefExActivity">
 
         </activity>
-        <activity android:name=".PrefExActivity">
+        <activity android:name=".PrefFragmentActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
