--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <!-- 외부저장소에 읽기 쓰기 권한 요청, 앱 전용 데이터로 저장하는 경우 SDK 18 이후부터는 권한 요청이 필요 없음. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <!-- 안드로이드 9 부터  권한요청필요 -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
